--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a class="nav-link"href="#Animating_the_cube">Animating the Cube</a></li>
         </ul>
         <footer>
+          <p>Content source from <a href="https://threejs.org/docs/index.html#manual/en/introduction/Creating-a-scene" target="_blank">three.js</a></p>
           <p>Website designed and developed by Yishuen Lo</p>
           <p class="tagline"><a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page" target="_blank">Technical Documentation <span class="separator">//</span> A freeCodeCamp Project</a></p>
         </footer>
