update credit & media query

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <li><a class="nav-link"href="#Creating_the_scene">Creating the Scene</a></li>
           <li><a class="nav-link"href="#Rendering_the_scene">Rendering the Scene</a></li>
           <li><a class="nav-link"href="#Animating_the_cube">Animating the Cube</a></li>
+          <li><a class="nav-link"href="#reference">Reference</a></li>
         </ul>
         <footer>
-          <p>Content source from <a href="https://threejs.org/docs/index.html#manual/en/introduction/Creating-a-scene" target="_blank">three.js</a></p>
           <p>Website designed and developed by Yishuen Lo</p>
           <p class="tagline"><a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page" target="_blank">Technical Documentation <span class="separator">//</span> A freeCodeCamp Project</a></p>
         </footer>
@@ -172,6 +172,14 @@
           </div>
 
           <p>This will be run every frame (normally 60 times per second), and give the cube a nice rotation animation. Basically, anything you want to move or change while the app is running has to go through the animate loop. You can of course call other functions from there, so that you don't end up with a animate function that's hundreds of lines.</p>
+        </article>
+      </section>
+
+      <section id="reference">
+        <header>Reference</header>
+        <article>
+          <p>All the documentation from this page is from three.js <a href="https://threejs.org/docs/index.html#manual/en/introduction/Creating-a-scene" target="_blank">Creating a Scene</a></p>
+          <p>Introduction and Features from <a href="https://en.wikipedia.org/wiki/Three.js" target="_blank">wikipedia</a></p>
         </article>
       </section>
 
