--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav id="navbar">
       <header>
-        <a href="#main-doc" class="title">Three.js</a>
+        <a href="https://yishuenlo.github.io/techdoc/" class="title">Three.js</a>
          //Documentation
        </header>
         <ul>
