update author name

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Fira+Sans:300|Reenie+Beanie" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Three.js Documentation</title>
   </head>
@@ -22,7 +23,7 @@
           <li><a class="nav-link"href="#reference">Reference</a></li>
         </ul>
         <footer>
-          <p>Website designed and developed by Yishuen Lo</p>
+          <p>Website designed and developed by <a href="https://github.com/yishuenlo" class="name" target="_blank" title="Visit Yish's Github">yish</a></p>
           <p class="tagline"><a href="https://learn.freecodecamp.org/responsive-web-design/responsive-web-design-projects/build-a-technical-documentation-page" target="_blank">Technical Documentation <span class="separator">//</span> A freeCodeCamp Project</a></p>
         </footer>
 
